--- a/composer.json
+++ b/composer.json
@@ -30,5 +30,19 @@
         "branch-alias": {
             "dev-master": "2.0.x-dev"
         }
-    }
+    },
+    "repositories": [
+        {
+            "type": "package",
+            "package": {
+                "name": "jmikola/auto-login",
+                "version": "2.0",
+                "source": {
+                    "url": "https://github.com/tachnik/AutoLogin.git",
+                    "type": "git",
+                    "reference": "feature/extend-abstract-listener-2"
+                }
+            }
+        }
+     ]
 }
